--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Heyo World 
+<head>
+  <title>
+    My Small Ecofriendly Blog
+  </title>
+</head>
+<body> 
+  <h1>API Design Resources</h1>
+  <p>Api design is half dark art, these should help get you on your way.</p>
+  <ul>
+    <li>
+      <a href="https://slack.engineering/how-we-design-our-apis-at-slack/">Slack API Design Guide</a>
+    </li>
+    <li>
+      <a href="https://cloud.google.com/apis/design">Google Cloud API Design Guide </a>
+    </li>
+    <li>
+      <a href="https://learn.microsoft.com/en-us/azure/architecture/best-practices/api-design">Azure API Design Guide</a>
+    </li>
+  </ul>
+  
+</body>
