Add simple summary

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   </title>
 </head>
 <body> 
-  <h1>API Design Resources</h1>
+  <h1> Hi! I'm Chris </h1>
+  <p> Just a simple software engineer in San Francisco. </p>
+  <h1> Useful Stuff I've collected. </h1>
+  <h2>API Design Resources</h2>
   <p>Api design is half dark art, these should help get you on your way.</p>
   <ul>
     <li>
