trying to center this

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   </title>
 </head>
 <body> 
+  <center>
   <h1> Hi! I'm Chris </h1>
   <p> Just a simple software engineer in San Francisco. </p>
   <h1> Useful Stuff I've collected. </h1>
@@ -20,5 +21,5 @@
       <a href="https://learn.microsoft.com/en-us/azure/architecture/best-practices/api-design">Azure API Design Guide</a>
     </li>
   </ul>
-  
+  </center>
 </body>
