--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
   <title>
     My Small Ecofriendly Blog
   </title>
+  <style>
+    .lilPadding {
+      padding: .4em;
+    }
+  </style>
 </head>
 <body> 
-  <center>
+  <div class="lilPadding">
   <h1> Hi! I'm Chris </h1>
   <p> Just a simple software engineer in San Francisco. </p>
   <h1> Useful Stuff I've collected. </h1>
@@ -21,5 +26,5 @@
       <a href="https://learn.microsoft.com/en-us/azure/architecture/best-practices/api-design">Azure API Design Guide</a>
     </li>
   </ul>
-  </center>
+  </div>
 </body>
