added a font to the body

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     .lilPadding {
       padding: .4em;
     }
+    @font-face {
+    font-family: 'berkley-mono';
+    src: url('BerkleyMonoVariable-Regular.woff2') format('woff2');
+    font-weight: normal; 
+    font-style: normal;
+    }
+    body {
+    font-family: 'berkley-mono'; 
+    }
   </style>
 </head>
 <body> 
