Add vim resources

--- a/index.html
+++ b/index.html
@@ -35,5 +35,14 @@
       <a href="https://learn.microsoft.com/en-us/azure/architecture/best-practices/api-design">Azure API Design Guide</a>
     </li>
   </ul>
+    <h2>Vim Resources</h2>
+    <p>
+      I've vimified like 90% of my workflows. Worth learning just for the fun of it, but it does have a high learning curve.
+    </p>
+    <ul>
+      <li>
+        <a href="https://vim-adventures.com/"> Vim Adventures </a>
+      </li>
+    </ul>
   </div>
 </body>
