added some good reads

--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
   <h1> Hi! I'm Chris </h1>
   <p> Just a simple software engineer in San Francisco. </p>
   <h1> Useful Stuff I've collected. </h1>
+  <h2> Good reads </h2>
+  <ul>
+    <li>
+      <a href="https://grugbrain.dev">Grug Brained Dev</a>
+    </li>
+    <li>
+      <a href="https://gist.github.com/chitchcock/1281611">Stevey's Google Platform Rant </a>
+    </li>
+  </ul>
   <h2>API Design Resources</h2>
   <p>Api design is half dark art, these should help get you on your way.</p>
   <ul>
