--- a/index.html
+++ b/index.html
@@ -56,5 +56,15 @@
         <a href="https://vim-adventures.com/"> Vim Adventures </a>
       </li>
     </ul>
+    
+    <h2> Posts </h2>
+    <ul>
+    {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+  {% endfor %}
+  </ul>
+    
   </div>
 </body>
