--- a/index.html
+++ b/index.html
@@ -6,18 +6,29 @@
   </title>
   <style>
     .lilPadding {
-      padding: .4em;
+      padding: .5em
     }
-    @font-face {
-    font-family: 'berkley-mono';
-    src: url('BerkleyMonoVariable-Regular.woff2') format('woff2');
-    font-weight: normal; 
-    font-style: normal;
-    }
+
     body {
-    font-family: 'berkley-mono'; 
+      background: linear-gradient(272deg, #6f396c, #cf216c 65%, #ff9fe7);
+      font-family: 'Montserrat', sans-serif;
+      color: whitesmoke;
+    }
+
+    a {
+      color: whitesmoke;
+      font-style: italic;
+      text-decoration: none;
+    }
+
+    a:hover {
+      color: lightblue;
     }
   </style>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </head>
 <body> 
   <div class="lilPadding">
@@ -59,7 +70,7 @@
       </li>
     </ul>
     
-    <h2> Posts </h2>
+    <h2> Posts that are too long for Twitter. </h2>
     <ul>
       {% for post in site.posts %}
       <li>
