--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
       <li>
         <a href="https://vim-adventures.com/"> Vim Adventures </a>
       </li>
+      <li>
+        <a href="https://teachyourselfcs.com/"> Self taught CS resources. Read these books. </a>
+      </li>
     </ul>
     
     <h2> Posts that are too long for Twitter. </h2>
