--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
         <a href="https://teachyourselfcs.com/"> Self taught CS resources. Read these books. </a>
       </li>
     </ul>
+    <h2> Lectures and courses </h2>
+    <ul>
+      <li>
+        <a href="https://brandonspark.github.io/150/"> functional programming course from CMU
+      </li>
+    </ul>
     
     <h2> Posts that are too long for Twitter. </h2>
     <ul>
