added econ section

--- a/index.html
+++ b/index.html
@@ -91,5 +91,13 @@
         <a href="https://brandonspark.github.io/150/"> functional programming course from CMU </a>
       </li>
     </ul>
+    <h2>Economics/Investing</h2>
+    <h3>Beginner friendly resources</h3>
+    <ul>
+      <li><a href="https://youtu.be/PHe0bXAIuk0?si=WhWumT5rT-cyJQIS"> Ray Dalio's explaination of how the economy works</a></li>
+      <li><a href="https://youtu.be/rf_f8GV0yYM?si=Gl83VsiicAwXSZAP"> Peter Lynch lecture on investing</a></li>
+      <li><a href="https://youtu.be/VI_riscmviI?si=fYfzNocF7lYJHOTE"> Intor to finance by Martin Shkreli</a> his valuing things from scratch series is pretty good too.</li>
+      <li><a href="https://a.co/d/hJGRXZj"> Market Wizards + Unknown Market Wizards </a></li>
+    </ul>
   </div>
 </body>
