--- a/index.html
+++ b/index.html
@@ -8,13 +8,23 @@
     .lilPadding {
       padding: .5em
     }
-
+    
+    @keyframes moveGradient {
+      0% {
+        background-position: 0% 50%;
+      }
+      100% {
+        background-position: 100% 50%;
+      }
+    }
+      
     body {
       background: linear-gradient(272deg, #6f396c, #cf216c 65%, #ff9fe7);
       font-family: 'Montserrat', sans-serif;
       color: whitesmoke;
       max-width: 50em;
       margin: auto;
+      animation: moveGradient 10s linear infinite;
     }
 
     a {
