changed background to be simpler

--- a/index.html
+++ b/index.html
@@ -8,18 +8,10 @@
     .lilPadding {
       padding: .5em
     }
-    
-    @keyframes moveGradient {
-      0% {
-        background-position: 0% 50%;
-      }
-      100% {
-        background-position: 100% 50%;
-      }
-    }
+
       
     body {
-      background: linear-gradient(272deg, #6f396c, #cf216c 65%, #ff9fe7);
+      background: cornflowerblue;
       font-family: 'Montserrat', sans-serif;
       color: whitesmoke;
       max-width: 50em;
