added an about section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
   <div class="lilPadding">
   <h1> Hi! I'm Chris </h1>
   <p> Just a simple software engineer in San Francisco. </p>
-    
+  <p> I've worked at Linkedin, Amazon and SIG. As well as building some fun stuff on the side.</p>
+  <p> I'm interested in Novel Algorithms, Datastrucutres, economnics, art and really anything else you might be interested in.</p>
+  <p> hmu on <a href="https://twitter.com/BakoTac0">twitter/X</a> if you wanna chat! </p>
   <h1> Things that I've built or written </h1>
   <h2> Posts that are too long for Twitter. </h2>
   <ul>
