--- a/index.html
+++ b/index.html
@@ -1,5 +1,59 @@
 ---
 ---
+<!-- 
+Ah nice you've found my little hidden comment. 
+
+@%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%####%#####%%%%%###################%@
+@#%%%%%%%%%%%%%%%%%%%%%%%%%%%%#########################################%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%#@
+%#%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%######################################%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%*%
+@#%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%########################################%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%#@
+@*%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%########################################%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%@
+%#%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%##########################################%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%@
+%#%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%############%###############%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%@
+@#%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%##################################################%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%@
+@#%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%#######################################################%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%@
+@%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%#*#################################%######################%%%%%%%%%%%%%%%%%%%%%%%%%%%%%@
+@%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%#############################################################%%%%%%%%%%%%%%%%%%%%%%%%%%@
+@%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%#*#############################################################%%%%%%%%%%%%%%%%%%%%%%%@
+@%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%#*############*#################################################%%%%%%%%%%%%%%%%%%%%%%@
+@%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%############%%%%%%%##############################%################%####%%%%%%%%%%%%%%%@
+@%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%#*#############%#############################+#########################%%%%%%%%%%%##%%@
+@%%%%%%%%%%%%%%%%%%%%%##%%%%%%%%%%##%%%%%%%%%%%#*#############%##%%%%######################*-###########################%%%%%%%%%#*#%@
+@%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%################%####%###############*--+######=##########%#######%%#####%%%#*#%%%%%##%@
+@%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%*+*#############%###################*---*######=+#####*##%%%######*++*#####%###%%%%%##%@
+@%%%%%%%%%%%%%%%%%%%%%####%%%%%%%%%%%%%%%%%%%#*+*####%%#######%####################+++*######--*###**#+##%#####+***##%##%%%%#%%%%%##%@
+@%%%%%%%%%%%%%%%%%%%%#*##%%%%#%%%%%%%%%%%%%#*##*##*#**#%######%##################*+==+###+.-:-=*####+#####**###***+#%%##%%%##*######%@
+@%%%%%%%%%%%%%%%%%%%%%%%##%##*#%%%%%%%%%##******##+++=--==-=**#####**=########=::--:-+++*-:-*=*###*##****##*+=-=+*##**#%%######%#%%%%@
+@%%%%%%%%%%%%%%%%%%%%%%%%%###%%%%%%%%%##**###*##*=*+.::-+*:=+*=#####****###+=+*##+:::---==--#**##****#######=--===+***%%%%#%###%%%%%%@
+@%%%%%%%%%%%%%%%%%%%%%%%%%%##%%%%%+-=*%#*##%%%%#-**--=-:=****##*####**###########*-::-:-*+--#*+++*+*#%%####%+-=+*===*%%%%%%%##%%%%%%%@
+@%%%%%%%%%%%%%%%%%%%%%%%%%%##%%%%%-=***###%%%%%#-++==+:-+*#*###++***+++#########**-::=:=*==:*+#%#=*##%%**%+==--***+*#%##%%%%%#%%%%%%%@
+@%%%%%%%%%%%%%%%%%%%%%%%%%###%%%%%%++++=*=*#%%%#--+*****##*#*###==###########*****+==++*=+=:+%%%###*%%#=*##=--+##*+#####%%%%%%%%%%%%%@
+@%%%%%%%%%%%%%%%%%%%%%%%%%###%%%%%%#++++=+*#%%%*++*****#**##########*##*###*****+::-:=-=+*=+##%+=++*==+++*#%**##%##%%*###%%%%%%%%%%%%@
+@%%%%%%%%%%%%%%%%%%%%%%%%%%#########++=-=+*##%#**#*##****###############*-===-+::=+*++*+**+####=-+*+=*+=++*#%%%%%%%%%#####%%%%%%%%%%%@
+@%%%%%%%%%%%%%%%%%%%%%%%%%#########*++-=+*###%#**#**########********+=--=*#*==+-=+-=--=-+**#=*#==*#+**+++*##%%%%%%%%%####%%%%%%%%%%%%@
+@%%%%%%%%%%%%%%%%%%%%%#############+=--+#*%%%%#**+******####*+++===----=*##*-=*-=+-----==+==--::=+=+#++**###%%%%%%%%%%%%%%%%%%%%%%%%%@
+@%%%%%%%%%%%%%%%%%%%%%%%%%%%%%#**++---=*##%%++===*#****#*###+=---===**+----:-=:-.::-+++*###*++=*##+*++**###%%%%%%%%%%%%%%%%%%%%%%%%%%@
+@%%%%%%%%%%%%%%%%%%%%%%%%%%%**++-+-=-+**#*%*---=*#*****####*-+*####=-====*#+*=+-.-. .:+*#%##++*%#***+*##*##%%%%@%%%%%%%%%%%%%%%%%%%%#@
+@%%%%%%%%%%%%%%%%%%%%%%%%#=+**=+=++=***##*#*+-=*******#####*=+#+##*+*++*####*##*=-+:-+########***#######*##%#%%%%%%%%%%%%%%%%%%%%%%%%@
+@%%%%%%%%%%%%%%%%%%%%#**+++++*+=*+**#*#%%#*#*+********######*################*#****++**######**+*#****#*#*%#%%%%%%%%%%%%%%%%%%%%%%%%#@
+@%%%%%%%%%%%%%%%%%%%#+++******#*#+****%%%#+##*#******####*##+#%%#######%%%###*#********#%%%%%++====+++****%###%%@%%%%%%%%%%%%%%%%%%%#@
+@%%%%%%%%%%%%%%%%%%#*######**+**+#+****###+##****#**####**###***#######%%%%%%%#*****####%%%#+++++*+****++###*#%%@@@%%%%%%%%%%%%%%%%%#@
+@%%%%%%%%%%%%%%%%%#**#%%##***###*+#****%%###*******#*#*****##****######%%%%%%%%*****###%%%%+++*+++*##*+*#*********#@@%%%%%%%%%%%%%%%#@
+@%%%%%%%%%%%%%%%%%###%%############*++*%%####*:-****#####*###%%%%%%%%%%%%%%%%%%%#****##%%%#+++*****##+*##%%%%%%%%%%%@@%%@%%%%%%%%%#%#@
+@%%%%%%%%%%%%%%%%##%%%%%%############%###*###+..=**#%%%#-:=*%%%%%%%%%%%%%%%%%%%%%%#%%*#%%#+++*+#***#**###%%%%%%%%%%%%%%%%%%%%%%%%%%##@
+@%%%%%%%%%%%%%##%%#%%%%%%%#%###########*###%%=:-*###%%%%+=+*%%%%%%%%%%%%%%%%%%%%%%%%#+*%%*+*+####*##**#%#%%%%%%%%%%%%%%%%%%%%%%%%%%%*%
+@%%%%%%%%%%#%%##%%%%%%%#%##%###########%%%%%%=-+**##%%%%%*-=#%%%%%%%%%%%%%%%%%%%%%%%**#%#***+*#%%%%%**#%*%%%%%%%##%%%%%%%%%%%%%%%%%%*%
+@%%%%%%%%%%%%%%%#%%##%##%%%#####%######%%%%%%--***#####%%%*-*%%%%%%%%%%%%%%%%#**********++*+*##%%%%==##%*##%%%#####%%%%%%%#%%%%%%%%%*%
+@%%%%%%%%%%%%%%%%%%%%%%%%%%###**++**########*-+##*#######%#*=##%#%%#%%%%#####*+########==**+******==+*##+#####%##%#%%%%%#%%%%%%%%%%%#@
+@%%%%%%%%%%%%%%%%%%%%%%%%%####*+++*+##***+-:-=*##%##%##*****=*%*****######**********++***++**%**++###########%%%%%#%%%%%%%%%%%%%%%%%#@
+@%%%%%%%%%%%%%%%%%%%%%%%%%##########*************************************************++++**++++*++##############%##%%%%%%%%%%%%######@
+@#%%%%%%%%%%%%%%%%%%%%%#####*************************************+++*+++++++++++++++++++++++++++++#######%##########%###*************@
+@*%%%%%%%%%%%%%%%%%%%#%%#####*******************************++++++++++++++++++++++++++++++++++++++++++=+++++++++++++****************#@
+@#%%%%%%%%%%%%%#%%%%########**********************+++++++++++++++++++++*++++++++++++++++++++++++++++======+++++++++++++*************#@
+@%%%%%%%%#%%#####################################################******#####**####################################################%%%@
+
+Have fun :) 
+--> 
 <head>
   <title>
     My Small Ecofriendly Blog
@@ -40,8 +94,8 @@
   <h1> Hi! I'm Chris </h1>
   <p> Just a simple software engineer in San Francisco. </p>
   <p> I've worked at Linkedin, Amazon and SIG. As well as building some fun stuff on the side.</p>
-  <p> I'm interested in Novel Algorithms, Datastrucutres, economnics, art and really anything else you might be interested in.</p>
-  <p> hmu on <a href="https://twitter.com/BakoTac0">twitter/X</a> if you wanna chat! </p>
+  <p> I'm interested in software engineering, computer science, economnics, art and really anything else you might be interested in.</p>
+  <p> hmu on <a href="https://twitter.com/BakoTac0">twitter/X</a> if you wanna chat! If you're excited about something, or know a lot no matter how nice I'd love to hear it.</p>
   <h1> Things that I've built or written </h1>
   <h2> Posts that are too long for Twitter. </h2>
   <ul>
