--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Have fun :)
       background: cornflowerblue;
       font-family: 'Montserrat', sans-serif;
       color: whitesmoke;
-      max-width: 50em;
+      max-width: 60em;
       margin: auto;
       animation: moveGradient 10s linear infinite;
     }
@@ -93,7 +93,7 @@ Have fun :)
   <div class="lilPadding">
   <h1> Hi! I'm Chris </h1>
   <p> Just a simple software engineer in San Francisco. </p>
-  <p> I've worked at <a href="https://www.linkedin.com/in/chrisby/">Linkedin's</a> infra, Amazon Alexa, and SIG on tools for sysadmins/doing devopsy sysadminny stuff.</p>
+  <p> I've worked on <a href="https://www.linkedin.com/in/chrisby/">Linkedin's</a> infra, Amazon Alexa, and SIG on tools for sysadmins/doing devopsy sysadminny stuff.</p>
   <p> I'm interested in software engineering, computer science, economnics, art and really anything else you might be interested in.</p>
   <p> hmu on <a href="https://twitter.com/BakoTac0">twitter/X</a> if you wanna chat! If you're excited about something, or know a lot no matter how nice I'd love to hear it.</p>
   <h1> Things that I've built or written </h1>
