--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@ Have fun :)
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+  <meta property="og:title" content="Chris's Small EcoFriendly Blog" />
+  <meta property="og:description" content="Why are you sharing my blog? lol" />
+  <meta property="og:url" content="https://www.chrisbako.com/" />
+  <meta property="og:image" content="https://photos.google.com/photo/AF1QipO5XbKycBlYxW2FFf715e4iExkUcXpQm37n7Rsm" />
 </head>
 <body> 
   <div class="lilPadding">
