--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Have fun :)
   <meta property="og:title" content="Chris's Small EcoFriendly Blog" />
   <meta property="og:description" content="Why are you sharing my blog? lol" />
   <meta property="og:url" content="https://www.chrisbako.com/" />
-  <meta property="og:image" content="https://photos.google.com/photo/AF1QipO5XbKycBlYxW2FFf715e4iExkUcXpQm37n7Rsm" />
+  <meta property="og:image" content="https://chrisbako.com/media/girl.jpeg" />
 </head>
 <body> 
   <div class="lilPadding">
