basic tracking stash

--- a/index.html
+++ b/index.html
@@ -30,10 +30,20 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </head>
-<body> 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZLW7M5WWY0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZLW7M5WWY0');
+</script>
+<body>
   <div class="lilPadding">
   <h1> Hi! I'm Chris </h1>
-  <p> Just a simple software engineer in San Francisco. </p>
+  <p> Just a simple software engineer in San Francisco.</p>
+  <p>Usually I just do backend so this is just for fun.</p>
   <h1> Useful Stuff I've collected. </h1>
   <h2> Good reads </h2>
   <ul>
@@ -78,6 +88,5 @@
       </li>
       {% endfor %}
     </ul>
-    
   </div>
 </body>
