--- a/index.html
+++ b/index.html
@@ -136,6 +136,11 @@ Have fun :)
       <li><a href="https://teachyourselfcs.com/"> Self taught CS resources. Read these books. </a></li>
     </ul>
     <h2> Lectures and courses </h2>
+    <h3> AI </h3>
+    <ul>
+      <li><a href="https://www.youtube.com/watch?v=zjkBMFhNj_g"> Intro to Large Language Models </a> by Andrej Karpathy (worked at OpenAI, Tesla AI, etc.)</li>
+    </ul>
+    <h3> Programming Languages </h3>
     <ul>
       <li><a href="https://brandonspark.github.io/150/"> functional programming course from CMU </a></li>
     </ul>
