--- a/index.html
+++ b/index.html
@@ -91,11 +91,14 @@ Have fun :)
   <meta property="og:title" content="Chris's Small EcoFriendly Blog" />
   <meta property="og:description" content="Why are you sharing my blog? lol" />
   <meta property="og:url" content="https://www.chrisbako.com/" />
-  <meta property="og:image" content="https://chrisbako.com/media/girl.jpeg" />
+  <meta property="og:image" content="https://chrisbako.com/media/profile_photo.PNG" />
 </head>
 <body> 
   <div class="lilPadding">
-  <h1> Hi! I'm Chris </h1>
+  <h1> H
+    i! I'm Chris           
+    <img src="https://chrisbako.com/media/profile_photo.PNG" alt="My sexy profile photo"> 
+  </h1> 
   <p> Just a simple software engineer in San Francisco. </p>
   <p> I've worked on <a href="https://www.linkedin.com/in/chrisby/">Linkedin's</a> infra, Amazon Alexa, and SIG on tools for sysadmins/doing devopsy sysadminny stuff.</p>
   <p> I'm interested in software engineering, computer science, economnics, art and really anything else you might be interested in.</p>
