add tailwind css

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@ Have fun :)
   <meta property="og:description" content="Why are you sharing my blog? lol" />
   <meta property="og:url" content="https://www.chrisbako.com/" />
   <meta property="og:image" content="https://chrisbako.com/media/profile_photo.PNG" />
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body> 
   <div class="lilPadding">
