--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@ Have fun :)
       padding: .5em
     }
 
+    .profilePhoto {
+      max-height: 90%;
+      max-width: 20%;
+      border-radius: 20%;
+    }
       
     body {
       background: cornflowerblue;
@@ -96,9 +101,9 @@ Have fun :)
 </head>
 <body> 
   <div class="lilPadding">
-  <h1> H
-    i! I'm Chris           
+  <h1> 
     <img src="https://chrisbako.com/media/profile_photo.PNG" alt="My sexy profile photo"> 
+    Hi! I'm Chris           
   </h1> 
   <p> Just a simple software engineer in San Francisco. </p>
   <p> I've worked on <a href="https://www.linkedin.com/in/chrisby/">Linkedin's</a> infra, Amazon Alexa, and SIG on tools for sysadmins/doing devopsy sysadminny stuff.</p>
