update profile pic

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ Have fun :)
 <body> 
   <div class="lilPadding">
   <h1> 
-    <img src="https://chrisbako.com/media/profile_photo.PNG" alt="My sexy profile photo"> 
+    <img class="profilePhoto" src="https://chrisbako.com/media/profile_photo.PNG" alt="My sexy profile photo"> 
     Hi! I'm Chris           
   </h1> 
   <p> Just a simple software engineer in San Francisco. </p>
