--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@ Have fun :)
       max-width: 20%;
       border-radius: 20%;
     }
+
+    .aboutContainer {
+      display: flex;
+    }
       
     body {
       background: cornflowerblue;
@@ -101,13 +105,17 @@ Have fun :)
 <body> 
   <div class="lilPadding">
   <h1> 
-    <img class="profilePhoto" src="https://chrisbako.com/media/profile_photo.PNG" alt="My sexy profile photo"> 
     Hi! I'm Chris           
   </h1> 
-  <p> Just a simple software engineer in San Francisco. </p>
-  <p> I've worked on <a href="https://www.linkedin.com/in/chrisby/">Linkedin's</a> infra, Amazon Alexa, and SIG on tools for sysadmins/doing devopsy sysadminny stuff.</p>
-  <p> I'm interested in software engineering, computer science, economnics, art and really anything else you might be interested in.</p>
-  <p> hmu on <a href="https://twitter.com/BakoTac0">twitter/X</a> if you wanna chat! If you're excited about something, or know a lot no matter how nice I'd love to hear it.</p>
+  <div class="aboutContainer"> 
+    <img class="profilePhoto lilPadding" src="https://chrisbako.com/media/profile_photo.PNG" alt="My sexy profile photo"> 
+    <div class="lilPadding"> 
+      <p> Just a simple software engineer in San Francisco. </p>
+      <p> I've worked on <a href="https://www.linkedin.com/in/chrisby/">Linkedin's</a> infra, Amazon Alexa, and SIG on tools for sysadmins/doing devopsy sysadminny stuff.</p>
+      <p> I'm interested in software engineering, computer science, economnics, art and really anything else you might be interested in.</p>
+      <p> hmu on <a href="https://twitter.com/BakoTac0">twitter/X</a> if you wanna chat! If you're excited about something, or know a lot no matter how nice I'd love to hear it.</p>
+    </div>
+  </div>
   <h1> Things that I've built or written </h1>
   <h2> Posts that are too long for Twitter. </h2>
   <ul>
