responsive design is illegal

--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@ Have fun :)
     My Small Ecofriendly Blog
   </title>
   <style>
+    @media (max-width: 1000px) {
+      .profilePhoto {
+        display: none;
+      }
+    }
+
     .lilPadding {
       padding: .5em
     }
