--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@ Have fun :)
       <p> Just a simple software engineer in San Francisco. </p>
       <p> I've worked on <a href="https://www.linkedin.com/in/chrisby/">Linkedin's</a> infra, Amazon Alexa, and SIG on tools for sysadmins/doing devopsy sysadminny stuff.</p>
       <p> I'm interested in software engineering, computer science, economnics, art and really anything else you might be interested in.</p>
-      <p> hmu on <a href="https://twitter.com/BakoTac0">twitter/X</a> if you wanna chat! If you're excited about something, or know a lot no matter how nice I'd love to hear it.</p>
+      <p> hmu on <a href="https://twitter.com/BakoTac0">twitter/X</a> if you wanna chat! If you're excited about something, or know a lot no matter how niche I'd love to hear it.</p>
+      <p> I do photography, ride motorcycels, play games, and read too much in my spare time. </p>
     </div>
   </div>
   <h1> Things that I've built or written </h1>
