--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@ Have fun :)
   </div>
   <h1> Things that I've built or written </h1>
   <h2> Posts that are too long for Twitter. </h2>
+  <p><a href="https://buttondown.email/chrisby">Subscribe!</p>
   <ul>
     {% for post in site.posts %}
     <li>
