--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@ Have fun :)
         display: none;
       }
     }
+    .subscribeForm {
+      background: whitesmoke;
+    }
+
     * {
        font-family: 'Montserrat', sans-serif;
        background: cornflowerblue;
@@ -147,8 +151,8 @@ Have fun :)
     class="embeddable-buttondown-form"
   >
   <label for="bd-email">Enter your email!</label>
-  <input type="email" name="email" id="bd-email" />
-  <input type="submit" value="Subscribe" />
+  <input class="subscribeForm" type="email" name="email" id="bd-email" />
+  <input class="subscribeForm" type="submit" value="Subscribe" />
   <p>
     <a href="https://buttondown.email/refer/chrisby" target="_blank">Powered by Buttondown.</a>
   </p>
