--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ Have fun :)
     onsubmit="window.open('https://buttondown.email/chrisby', 'popupwindow')"
     class="embeddable-buttondown-form"
   >
-  <label for="bd-email">Enter your email!</label>
+  <label for="bd-email">Enter your email:</label>
   <input class="subscribeForm" type="email" name="email" id="bd-email" />
   <input class="subscribeForm" type="submit" value="Subscribe" />
   <p>
