--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ Have fun :)
     * {
        font-family: 'Montserrat', sans-serif;
        background: cornflowerblue;
+       -webkit-appearance: none;
     }
 
     .lilPadding {
