--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@ Have fun :)
     My Small Ecofriendly Blog
   </title>
   <style>
+    @import url("https://fonts.googleapis.com/css?family=Montserrat");
+
     @media (max-width: 1000px) {
       .profilePhoto {
         display: none;
