--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@ Have fun :)
       <li><a href="https://youtu.be/VI_riscmviI?si=fYfzNocF7lYJHOTE"> Intor to finance by Martin Shkreli</a> his valuing things from scratch series is pretty good too.</li>
       <li><a href="https://a.co/d/hJGRXZj"> Market Wizards + Unknown Market Wizards </a></li>
       <li><a href="https://www.bitsaboutmoney.com/"> Bits about money </a></li>
+      <li><a href="https://www.bloomberg.com/opinion/authors/ARbTQlRLRjE/matthew-s-levine">Everything Matt Levine Writes</a></li>
     </ul>
   </div>
 </body>
