add tools section

--- a/index.html
+++ b/index.html
@@ -178,7 +178,12 @@ Have fun :)
     <li><a href="https://cloud.google.com/apis/design">Google Cloud API Design Guide </a></li>
     <li><a href="https://learn.microsoft.com/en-us/azure/architecture/best-practices/api-design">Azure API Design Guide</a></li>
   </ul>
-    <h2>Vim Resources</h2>
+    <h2> Favorite tools </h2>
+    <h3> Notetaking </h3>
+    <ul>
+      <li><a href="https://obsidian.md/"> Obsidian </a></li>
+    </ul>
+    <h3>Vim Resources</h3>
     <p>
       I've vimified like 90% of my workflows. Worth learning just for the fun of it, but it does have a high learning curve.
     </p>
