--- a/index.html
+++ b/index.html
@@ -212,6 +212,12 @@ Have fun :)
     <li><a href="https://learn.microsoft.com/en-us/azure/architecture/best-practices/api-design">Azure API Design Guide</a></li>
   </ul>
     <h2> Favorite tools </h2>
+    <h3> Browsers</h3>
+    <p> There are a bunch of interesting browser projects recently. More interesting than Chrome or Firefox. :)</p>
+    <ul>
+      <li> <a href="https://arc.net/">Arc Browser</a> is the one I currently use.</li>
+      <li> <a href="https://github.com/bonsai-desk/bonsai-browser">Bonsai Browser </a> really enjoyed this project but it got killed off.</li>                                                                     
+    </ul>
     <h3> Notetaking </h3>
     <ul>
       <li><a href="https://obsidian.md/"> Obsidian </a></li>
