added dark mode tranisition

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ Have fun :)
     body {
       max-width: 60em;
       margin: auto;
-      transition: all;
+      transition: all 2s;
     }
 
     a {
