--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ Have fun :)
     gtag('config', 'G-ZLW7M5WWY0');
   </script>
 </head>
-<body class="lightMode"> 
+<body> 
   <div class="lilPadding">
     <div style="display: flex;
         justify-content: space-between;
@@ -154,7 +154,7 @@ Have fun :)
           Hi! I'm Chris           
         </h1>
         <div x-data="{ darkMode: false }">
-          <button x-on:click="darkMode = !darkMode; toggleMode()">
+            <button x-on:click="darkMode = !darkMode; applyTheme()">
             Dark Mode
           </button>
         </div>
@@ -251,14 +251,16 @@ Have fun :)
       <li><a href="https://www.bloomberg.com/opinion/authors/ARbTQlRLRjE/matthew-s-levine">Everything Matt Levine Writes</a></li>
     </ul>
   </div>
-  <script>
-    function toggleMode() {
-        const bodyClasses = document.body.classList;
-        bodyClasses.toggle('lightMode');
-        bodyClasses.toggle('darkMode');
-    }
-
-    // Set initial mode
-    document.body.classList.add('lightMode');
-  </script>
+    <script>
+      function applyTheme() {
+          const bodyClasses = document.body.classList;
+          bodyClasses.toggle('lightMode', !darkMode);
+          bodyClasses.toggle('darkMode', darkMode);
+       }
+        
+      document.addEventListener('DOMContentLoaded', () => {
+          const darkMode = localStorage.getItem('darkMode') === 'true';
+          document.body.classList.add(darkMode ? 'darkMode' : 'lightMode');
+      });
+    </script>
 </body>
