Add some padding

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ Have fun :)
       </div>
     </div>
     <div class="creationsContainer">
-      <div>
+      <div class="lilPadding">
         <h2> Posts that are too long for Twitter. </h2>
         <ul>
           {% for post in site.posts %}
@@ -226,7 +226,7 @@ Have fun :)
         </p>
       </form>
     </div>
-    <div>
+    <div class="lilPadding">
           <h2>Things I've built! </h2>
           <ul>
             <li> This website! </li>
