--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ Have fun :)
     </div>
     <div class="creationsContainer">
       <div class="lilPadding">
-        <h2> Posts that are too long for Twitter. </h2>
+        <h2> Posts that are too long for Twitter</h2>
         <ul>
           {% for post in site.posts %}
           <li>
@@ -227,7 +227,7 @@ Have fun :)
       </form>
     </div>
     <div class="lilPadding">
-          <h2>Things I've built! </h2>
+          <h2>Things I've built</h2>
           <ul>
             <li> This website! </li>
           </ul>
