--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@ Have fun :)
 
     .aboutContainer {
       display: flex;
+      justify-content: space-around;
     }
     
     .creationsContainer {
