--- a/index.html
+++ b/index.html
@@ -117,6 +117,11 @@ Have fun :)
             display: flex;
         }
 
+        .resourcesContainer {
+            justify-content: space-around;
+            display: flex;
+        }
+
         body {
             max-width: 60em;
             margin: auto;
@@ -257,60 +262,63 @@ Have fun :)
     <li><a href="https://meaningness.com/geeks-mops-sociopaths">Geeks, MOPs, and sociopaths in subculture evolution</a>
     </li>
 </ul>
-<h2>API Design Resources</h2>
-<p>Api design is half dark art, these should help get you on your way.</p>
-<ul>
-    <li><a href="https://slack.engineering/how-we-design-our-apis-at-slack/">Slack API Design Guide</a></li>
-    <li><a href="https://cloud.google.com/apis/design">Google Cloud API Design Guide </a></li>
-    <li><a href="https://learn.microsoft.com/en-us/azure/architecture/best-practices/api-design">Azure API Design
-        Guide</a></li>
-</ul>
-<h2> Favorite tools </h2>
-<h3> Browsers</h3>
-<p> There are a bunch of interesting browser projects recently. More interesting than Chrome or Firefox. :)</p>
-<ul>
-    <li><a href="https://arc.net/">Arc Browser</a> is the one I currently use.</li>
-    <li><a href="https://github.com/bonsai-desk/bonsai-browser">Bonsai Browser </a> really enjoyed this project but it
-        got killed off.
-    </li>
-</ul>
-<h3> Notetaking </h3>
-<ul>
-    <li><a href="https://obsidian.md/"> Obsidian </a></li>
-</ul>
-<h3>Vim Resources</h3>
-<p>
-    I've vimified like 90% of my workflows. Worth learning just for the fun of it, but it does have a high learning
-    curve.
-</p>
-<ul>
-    <li><a href="https://vim-adventures.com/"> Vim Adventures </a></li>
-    <li><a href="https://teachyourselfcs.com/"> Self taught CS resources. Read these books. </a></li>
-</ul>
-<h2> Lectures and courses </h2>
-<h3> AI </h3>
-<ul>
-    <li><a href="https://www.youtube.com/watch?v=zjkBMFhNj_g"> Intro to Large Language Models </a> by Andrej Karpathy
-        (worked at OpenAI, Tesla AI, etc.)
-    </li>
-</ul>
-<h3> Programming Languages </h3>
-<ul>
-    <li><a href="https://brandonspark.github.io/150/"> functional programming course from CMU </a></li>
-</ul>
-<h2>Economics/Investing</h2>
-<h3>Beginner friendly resources</h3>
-<ul>
-    <li><a href="https://youtu.be/PHe0bXAIuk0?si=WhWumT5rT-cyJQIS"> Ray Dalio's explaination of how the economy
-        works</a></li>
-    <li><a href="https://youtu.be/rf_f8GV0yYM?si=Gl83VsiicAwXSZAP"> Peter Lynch lecture on investing</a></li>
-    <li><a href="https://youtu.be/VI_riscmviI?si=fYfzNocF7lYJHOTE"> Intor to finance by Martin Shkreli</a> his valuing
-        things from scratch series is pretty good too.
-    </li>
-    <li><a href="https://a.co/d/hJGRXZj"> Market Wizards + Unknown Market Wizards </a></li>
-    <li><a href="https://www.bitsaboutmoney.com/"> Bits about money </a></li>
-    <li><a href="https://www.bloomberg.com/opinion/authors/ARbTQlRLRjE/matthew-s-levine">Everything Matt Levine
-        Writes</a></li>
-</ul>
-
+<div class="resourcesContainer">
+    <div>
+        <h2> Favorite tools </h2>
+        <h3> Browsers</h3>
+        <p> There are a bunch of interesting browser projects recently. More interesting than Chrome or Firefox. :)</p>
+        <ul>
+            <li><a href="https://arc.net/">Arc Browser</a> is the one I currently use.</li>
+            <li><a href="https://github.com/bonsai-desk/bonsai-browser">Bonsai Browser </a> really enjoyed this project
+                but it
+                got killed off.
+            </li>
+        </ul>
+        <h3> Notetaking </h3>
+        <ul>
+            <li><a href="https://obsidian.md/"> Obsidian </a></li>
+        </ul>
+        <h3>Vim Resources</h3>
+        <p>
+            I've vimified like 90% of my workflows. Worth learning just for the fun of it, but it does have a high
+            learning
+            curve.
+        </p>
+        <ul>
+            <li><a href="https://vim-adventures.com/"> Vim Adventures </a></li>
+            <li><a href="https://teachyourselfcs.com/"> Self taught CS resources. Read these books. </a></li>
+        </ul>
+    </div>
+    <div>
+        <h2> Lectures and courses </h2>
+        <h3> AI </h3>
+        <ul>
+            <li><a href="https://www.youtube.com/watch?v=zjkBMFhNj_g"> Intro to Large Language Models </a> by Andrej
+                Karpathy
+                (worked at OpenAI, Tesla AI, etc.)
+            </li>
+        </ul>
+        <h3> Programming Languages </h3>
+        <ul>
+            <li><a href="https://brandonspark.github.io/150/"> functional programming course from CMU </a></li>
+        </ul>
+    </div>
+    <div>
+        <h2>Economics/Investing</h2>
+        <h3>Beginner friendly resources</h3>
+        <ul>
+            <li><a href="https://youtu.be/PHe0bXAIuk0?si=WhWumT5rT-cyJQIS"> Ray Dalio's explaination of how the economy
+                works</a></li>
+            <li><a href="https://youtu.be/rf_f8GV0yYM?si=Gl83VsiicAwXSZAP"> Peter Lynch lecture on investing</a></li>
+            <li><a href="https://youtu.be/VI_riscmviI?si=fYfzNocF7lYJHOTE"> Intor to finance by Martin Shkreli</a> his
+                valuing
+                things from scratch series is pretty good too.
+            </li>
+            <li><a href="https://a.co/d/hJGRXZj"> Market Wizards + Unknown Market Wizards </a></li>
+            <li><a href="https://www.bitsaboutmoney.com/"> Bits about money </a></li>
+            <li><a href="https://www.bloomberg.com/opinion/authors/ARbTQlRLRjE/matthew-s-levine">Everything Matt Levine
+                Writes</a></li>
+        </ul>
+    </div>
+</div>
 </body>
