add goals to index.html

--- a/index.html
+++ b/index.html
@@ -259,7 +259,29 @@ Have fun :)
             <li> This website!</li>
         </ul>
     </div>
+    <div>
+        <fieldset>
+            <legend>2024 Goal List</legend>
+            <div>
+                <span>&#x2B1C;</span> <!-- Checked emoji -->
+                <label>Make a dollar on the internet</label>
+            </div>
+            <div>
+                <span>&#x2B1C;</span> <!-- Unchecked emoji -->
+                <label>Start a magazine for my friends</label>
+            </div>
+            <div>
+                <span>&#x2B1C;</span> <!-- Unchecked emoji -->
+                <label>Write one blog post a month</label>
+            </div>
+            <div>
+                <span>&#x2B1C;</span> <!-- Unchecked emoji -->
+                <label>Go snowboarding 5 times🤙</label>
+            </div>
+        </fieldset>
+    </div>
 </div>
+
 
 <h1> Useful Stuff I've collected. </h1>
 <h2> Most important reads for software devs. </h2>
