--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ Have fun :)
             <li> This website!</li>
         </ul>
     </div>
-    <div>
+    <div class="lilPadding">
         <fieldset>
             <legend>2024 Goal List</legend>
             <div>
