--- a/index.html
+++ b/index.html
@@ -346,6 +346,7 @@ Have fun :)
     <li><a href="https://www.mit.edu/~xela/tao.html">The Tao of Programming</a></li>
     <li><a href="https://meaningness.com/geeks-mops-sociopaths">Geeks, MOPs, and sociopaths in subculture evolution</a>
     </li>
+    <li><a href="https://youtu.be/OTCuYzAw31Y">Google I/O 2012 - The Art of Organizational Manipulation</a></li>
 </ul>
 <div class="resourcesContainer">
     <div>
