--- a/index.html
+++ b/index.html
@@ -347,6 +347,7 @@ Have fun :)
     <li><a href="https://meaningness.com/geeks-mops-sociopaths">Geeks, MOPs, and sociopaths in subculture evolution</a>
     </li>
     <li><a href="https://youtu.be/OTCuYzAw31Y">Google I/O 2012 - The Art of Organizational Manipulation</a></li>
+    <li><a href="https://paulgraham.com/submarine.html">Paul Graham: The Submarine (it's about PR firms)</a></li>
 </ul>
 <div class="resourcesContainer">
     <div>
