--- a/index.html
+++ b/index.html
@@ -348,6 +348,7 @@ Have fun :)
     </li>
     <li><a href="https://youtu.be/OTCuYzAw31Y">Google I/O 2012 - The Art of Organizational Manipulation</a></li>
     <li><a href="https://paulgraham.com/submarine.html">Paul Graham: The Submarine (it's about PR firms)</a></li>
+    <li><a href="https://sites.google.com/site/forgottenemployee/">Forgotten Employee</a></li>
 </ul>
 <div class="resourcesContainer">
     <div>
