--- a/index.html
+++ b/index.html
@@ -353,6 +353,12 @@ Have fun :)
 </ul>
 <div class="resourcesContainer">
     <div>
+        <h2> Favorite Books </h2>
+        <ul>
+            <li><a href="https://en.wikipedia.org/wiki/Snow_Crash"> Snow Crash </a></li>
+        </ul>
+    </div>
+    <div>
         <h2> Favorite tools </h2>
         <h3> Browsers</h3>
         <p> There are a bunch of interesting browser projects recently. More interesting than Chrome or Firefox. :)</p>
