--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ Have fun :)
     </div>
 </div>
 <div class="aboutContainer">
-    <img class="profilePhoto lilPadding" src="https://chrisbako.com/media/profile_photo.PNG"
+    <img class="profilePhoto" src="https://chrisbako.com/media/profile_photo.PNG"
          alt="My sexy profile photo">
     <div class="lilPadding">
         <div>
