--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ Have fun :)
     <meta property="og:title" content="Chris's Small EcoFriendly Blog"/>
     <meta property="og:description" content="Why are you sharing my blog? lol"/>
     <meta property="og:url" content="https://www.chrisbako.com/"/>
-    <meta property="og:image" content="https://chrisbako.com/media/profile_photo.PNG"/>
+    <meta property="og:image" content="http://chrisbako.com/media/profile_photo.PNG"/>
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
