--- a/sketches/star-map.html
+++ b/sketches/star-map.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div id="mapid" style="width: 600px; height: 400px;"></div>
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/supabase.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script>
       var mymap = L.map('mapid').setView([37.77, -122.41], 13); // Set to your preferred default location and zoom level
